--- a/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
+++ b/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
@@ -38,11 +38,11 @@
             android:id="@+id/ll_folio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:visibility="@{investment.moreFolioList?View.GONE:View.VISIBLE}"
-            app:layout_constraintHorizontal_bias="0.0"
             android:layout_marginTop="@dimen/space_8"
+            android:orientation="horizontal"
+            android:visibility="@{investment.moreFolioList?View.GONE:View.VISIBLE}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvName">
 
@@ -219,7 +219,7 @@
         <android.support.constraint.ConstraintLayout
             android:id="@+id/lyt_multi_folio_value"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_marginTop="@dimen/space_8"
             android:visibility="@{investment.moreFolioList?View.VISIBLE:View.GONE}"
             app:layout_constraintEnd_toEndOf="parent"
@@ -229,6 +229,7 @@
             <HorizontalScrollView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:background="@drawable/shape_tbl_gray_bg"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -237,14 +238,18 @@
                     android:id="@+id/tlfolio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:divider="?android:attr/dividerHorizontal"
                     android:orientation="vertical"
+                    android:showDividers="middle"
                     android:stretchColumns="*">
 
                     <TableRow
                         android:id="@+id/trContent"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/bg_img_color">
+                        android:background="@color/bg_img_color"
+                        android:divider="?android:attr/dividerHorizontal"
+                        android:showDividers="middle">
 
                         <TextView
                             android:id="@+id/tvFolioNumberMultiple"
