--- a/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
+++ b/app/src/main/res/layout/row_goal_based_investment_details_list_item.xml
@@ -243,7 +243,7 @@
                     android:showDividers="middle"
                     android:stretchColumns="*">
 
-                    <TableRow
+                    <!--<TableRow
                         android:id="@+id/trContent"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -261,7 +261,7 @@
                             android:text="Folio\nNumber"
                             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                             android:textColor="@color/black"
-                            tools:text="1234546552" />
+                            tools:text="Folio\nNumber" />
 
                         <TextView
                             android:id="@+id/tvTotalInvestmentMultiple"
@@ -273,7 +273,7 @@
                             android:text="Total\nInvestment"
                             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                             android:textColor="@color/black"
-                            tools:text="74876565" />
+                            tools:text="Total\nInvestment" />
 
                         <TextView
                             android:id="@+id/tvCurrentValueMultiple"
@@ -285,7 +285,7 @@
                             android:text="Current\nValue"
                             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                             android:textColor="@color/black"
-                            tools:text="74876565" />
+                            tools:text="Current\nValue" />
 
                         <TextView
                             android:id="@+id/tvUnitsMultiple"
@@ -297,7 +297,7 @@
                             android:text="Units"
                             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                             android:textColor="@color/black"
-                            tools:text="74876565" />
+                            tools:text="Units" />
 
                         <TextView
                             android:id="@+id/tvReturnsMultiple"
@@ -309,9 +309,9 @@
                             android:text="%\nReturns"
                             android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                             android:textColor="@color/black"
-                            tools:text="74876565" />
+                            tools:text="%\nReturns" />
 
-                    </TableRow>
+                    </TableRow>-->
                 </TableLayout>
 
             </HorizontalScrollView>
