--- a/app/src/main/res/layout/fragment_redemption_status.xml
+++ b/app/src/main/res/layout/fragment_redemption_status.xml
@@ -91,7 +91,6 @@
                     android:layout_marginEnd="8dp"
                     android:maxLines="2"
                     android:minLines="2"
-                    android:text="SBI Banking and Financial Services Growth Direct Plan"
                     android:textAppearance="@style/TextAppearance.AppCompat.Small"
                     android:textColor="@color/item_selected_color"
                     app:layout_constraintEnd_toStartOf="@id/barrier"
@@ -117,11 +116,10 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/tvDate"
+                    android:id="@+id/tvUnits"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/lato_semibold"
-                    android:text="200"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_10ssp"
                     app:layout_constraintEnd_toEndOf="parent"
