--- a/app/src/main/res/layout/fragment_direct_investment.xml
+++ b/app/src/main/res/layout/fragment_direct_investment.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
-        <import type="android.view.View"/>
+        <import type="android.view.View" />
 
         <variable
             name="vm"
@@ -17,28 +16,51 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rvDInvests"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="@{vm.isDirectEmpty==true?View.GONE:View.VISIBLE}"
-                android:overScrollMode="never"
-                app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+                android:layout_height="match_parent">
 
-            <TextView
-                android:visibility="@{vm.isDirectEmpty==true?View.VISIBLE:View.GONE}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small"
-                android:text="@string/no_funds_found"
-                android:layout_width="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_height="wrap_content" />
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rvDInvests"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false"
+                    android:overScrollMode="never"
+                    android:visibility="@{vm.isDirectEmpty==true?View.GONE:View.VISIBLE}"
+                    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
 
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/tvHowReturns"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/rvDInvests"
+                    android:layout_marginStart="@dimen/space_16"
+                    android:layout_marginEnd="@dimen/space_16"
+                    android:layout_marginBottom="@dimen/space_16"
+                    android:fontFamily="@font/lato_semibold"
+                    android:text="@string/how_are_returns_calculated"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/colorAccent"
+                    android:visibility="@{vm.isDirectEmpty==true?View.GONE:View.VISIBLE}" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="@string/no_funds_found"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:visibility="@{vm.isDirectEmpty==true?View.VISIBLE:View.GONE}" />
+
+            </RelativeLayout>
+
+        </android.support.v4.widget.NestedScrollView>
 
     </android.support.v4.widget.SwipeRefreshLayout>
+
 </layout>
 
