--- a/app/src/main/res/layout/dialog_how_returns_intro.xml
+++ b/app/src/main/res/layout/dialog_how_returns_intro.xml
@@ -16,8 +16,8 @@
 
         <ImageView
             android:id="@+id/img_down"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
