--- a/app/src/main/res/layout/fragment_redeem_confirm.xml
+++ b/app/src/main/res/layout/fragment_redeem_confirm.xml
@@ -6,6 +6,11 @@
         <variable
             name="vm"
             type="com.tarrakki.module.redeem.RedeemConfirmVM" />
+
+        <variable
+            name="bank"
+            type="com.tarrakki.api.model.DefaultBankResponse.DefaultBank" />
+
     </data>
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -102,6 +107,7 @@
 
                 <ImageView
                     android:id="@+id/ivBank"
+                    app:imgUrl="@{bank.bankImgUrl}"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginTop="8dp"
@@ -117,11 +123,12 @@
                     android:layout_marginTop="@dimen/space_8"
                     android:fontFamily="@font/lato_bold"
                     android:singleLine="true"
-                    android:text="ICICI Bank"
+                    android:text="@{bank.bankName}"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                     android:textColor="@color/black"
                     app:layout_constraintStart_toEndOf="@id/ivBank"
-                    app:layout_constraintTop_toBottomOf="@id/tvTitleW" />
+                    app:layout_constraintTop_toBottomOf="@id/tvTitleW"
+                    tools:text="ICICI Bank" />
 
                 <TextView
                     android:id="@+id/tvAccountNo"
@@ -129,11 +136,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/space_8"
                     android:singleLine="true"
-                    android:text="A/C: 123456789456132"
+                    android:text="@{`A/C: ` + bank.accountNumber}"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                     android:textColor="@color/black"
                     app:layout_constraintStart_toEndOf="@id/ivBank"
-                    app:layout_constraintTop_toBottomOf="@id/tvBankName" />
+                    app:layout_constraintTop_toBottomOf="@id/tvBankName"
+                    tools:text="A/C: 123456789456132" />
 
                 <View
                     android:id="@+id/mDivider"
