--- a/app/src/main/res/layout/fragment_initiate_your_goal.xml
+++ b/app/src/main/res/layout/fragment_initiate_your_goal.xml
@@ -40,10 +40,11 @@
                     android:layout_width="144dp"
                     android:layout_height="144dp"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="@dimen/default_space"
+                    android:layout_marginTop="@dimen/sp8"
                     android:elevation="12dp"
                     app:cardBackgroundColor="@color/circular_bg"
                     app:cardCornerRadius="72dp"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent">
 
